fixed floating div issue where graphs where moved down by invisible text

--- a/style.css
+++ b/style.css
@@ -35,4 +35,10 @@ img {
 .clearfix{
   clear:both;
 }
-#alert { visibility: hidden; }
+#alert { 
+  visibility: hidden; 
+  float:left;
+}
+#info {
+  float: left;
+}
